...
      child: Scaffold(
        appBar: AppBar(
          title: Padding(
            padding: const EdgeInsets.all(12.0),
            child: MusicSearchBar(
              searchController: controller,
              hintText: "Search by Artist",
              onSearch: onSearch,
            ),
          ),
        ),
        body: Column(
          mainAxisAlignment: MainAxisAlignment.center,
...
            /// To Render Player Bar
            /// [PlayerBar] will track the [playerState] and update the UI
            /// accordingly
            SizeTransition(
              sizeFactor: animation,
              child: PlayerBar(
                key: const Key("PLAYER-BAR"),
                musicPlayerState: playerState,
                onPause: onPause,
                onResume: onResume,
                onStop: onStop,
              ),
            ),
...
